# digicompass

./: Cargo.toml  LICENSE  README  memory.x  sketch.fzz
.cargo/: config.toml  runner.sh
src/: data.rs  gps.rs  leds.rs  main.rs  ui.rs  usbserial_defmt.rs
src/locations/: load.rs  mod.rs  ruler.rs
